HasCASL/test/BasicSpec.casl.output
parse error at (line 362, column 10):
unexpected "?"
expecting casl char, underline word, "{", __, [<id>,...,<id>], "[", "%%", "%{", "%(", "%", ",", "(" or ":?"

